# servc-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: agent-issue.yml  agent-markdown.yml  changelog.yml  claude.yml  commit.yml  dependabot-auto-merge.yml  issue-agent.yml  publish.yml  servc.yml  test.yml
servc/: __main__.py
servc/cli/commands/init/src/: __init__.py
servc/cli/commands/init/template_pip/src/: __init__.py
servc/cli/commands/init/template_poetry/: pyproject.toml
