[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "servc (>=1.11.11,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "simplejson (>=3.20.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
